# verifiedai

./: .gitignore  README.md
.github/workflows/: ci.yml
action/: verifiedai.yml
bench/: audit_corpus.py  audit_lean_workbook.py  audit_minif2f.py  mutate_verina.py  run_bench.py
cli/: pyproject.toml
cli/verifiedai/: __init__.py  __main__.py  audit.py  faithfulness.py  lean.py  mutate.py  repair.py  server.py
cli/verifiedai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
compliance/: Compliance.lean  lake-manifest.json  lakefile.toml
compliance/Compliance/: AdvanceTax.lean  Gst.lean  IncomeTax.lean  Presumptive.lean  Reference.lean  Tds.lean
demo/: Demo.lean  break.sh  lake-manifest.json  lakefile.toml
demo/Demo/: Cheats.lean  Geometry.lean  Pricing.lean  Refunds.lean  Specs.lean
results/: lean_workbook.md  lean_workbook_audit.json  minif2f.md  minif2f_audit.json  proofnet.md  proofnet_audit.json  verina.md  verina_mutation.json
tests/: test_e2e.py  test_faithfulness.py  test_parser.py  test_sentinels.py  test_zoo.py
tools/: formalize_tax.py  formalize_tds.py
web/: compliance.html  index.html  leanworkbook.html  method.html  minif2f.html  paper.css  pitch.html  platform.html
zoo/: Zoo.lean  lake-manifest.json  lakefile.toml  manifest.json
zoo/Zoo/: AxiomSmuggling.lean  KnownGaps.lean  NativeTrust.lean  SorryVariants.lean  TrivialStatements.lean  Vacuity.lean
